--- a/styles/style.css
+++ b/styles/style.css
@@ -408,7 +408,8 @@ button, input {
   color: #fff;
 }
 
-.true-town-image img {
+.true-town-image {
+  display: block;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
@@ -537,7 +538,7 @@ button, input {
   margin: 0 auto;
 }
 
-.newsletter-label input {
+input[name="newsletter-email"] {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -1124,7 +1125,7 @@ input[name="max-price"] {
 
 /* ПОДВАЛ */
 
-.footer-wrapper {
+.page-footer {
   display: flex;
   justify-content: space-between;
   width: 1060px;
