--- a/styles/style.css
+++ b/styles/style.css
@@ -206,17 +206,25 @@ button, input {
 }
 
 .favorites-counter::after {
-  content: "12";
+  content: "";
   position: absolute;
   top: 15px;
   right: -2px;
   display: block;
   width: 20px;
   height: 20px;
-  font-size: 10px;
-  color: #fff;
   background-color: #7DB54F;
   border-radius: 10px;
+}
+
+.favorites-number {
+  position: absolute;
+  top: 13px;
+  left: 29px;
+  display: block;
+  font-size: 10px;
+  color: #fff;
+  z-index: 2;
 }
 
 /* ГЛАВНАЯ СТРАНИЦА */
@@ -546,6 +554,7 @@ button, input {
   display: flex;
   justify-content: space-between;
   width: 800px;
+  height: 60px;
   margin: 0 auto;
 }
 
@@ -573,6 +582,7 @@ input[name="newsletter-email"] {
 
 .subscribe-button {
   width: 200px;
+  height: 100%;
   padding: 12px 15px;
   font-size: 20px;
   line-height: 36px;
@@ -790,7 +800,10 @@ input[name="newsletter-email"] {
 }
 
 .hotel-type .control-input:focus + .control-mark {
-  border: 3px solid #83B3D3;
+  box-shadow: -1px 1px 0 2px #83B3D3,
+              1px -1px 0 2px #83B3D3,
+              1px 1px 0 2px #83B3D3,
+              -1px -1px 0 2px #83B3D3;
 }
 
 .price-controls {
@@ -830,7 +843,7 @@ input[name="newsletter-email"] {
   grid-column: 1 / -1;
   position: relative;
   height: 4px;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .range-bar {
@@ -1010,6 +1023,13 @@ input[name="max-price"] {
   height: 48px;
 }
 
+.select-control {
+  appearance: none;
+  background-image: url("../images/list-arrow-dropdown.svg");
+  background-repeat: no-repeat;
+  background-position: right 16px center;
+}
+
 .sorting {
   width: 290px;
   height: auto;
@@ -1140,6 +1160,8 @@ input[name="max-price"] {
   color: #fff;
   text-decoration: none;
   background-color: #756157;
+  padding: 9px 15px 8px 15px;
+  text-align: center;
 }
 
 .hotel-about-button:hover {
@@ -1222,11 +1244,6 @@ input[name="max-price"] {
 .accommodation-type {
   width: 140px;
   margin-right: 20px;
-}
-
-.hotel-about-button {
-  padding: 9px 15px 8px;
-  text-align: center;
 }
 
 .hotel-stars {
@@ -1426,3 +1443,164 @@ input[name="max-price"] {
 .copyright-logo:active .copyright-logo-icon {
   color: rgba(117, 97, 87, 0.3);
 }
+
+/* МОДАЛЬНОЕ ОКНО */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 62px 70px 70px 70px;
+  box-sizing: border-box;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+}
+
+.modal-search {
+  width: 715px;
+}
+
+.modal-search-title {
+  margin-bottom: 63px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 54px;
+  right: 70px;
+  width: 53px;
+  height: 53px;
+  background-color: #F2F2F2;
+  background-image: url("../images/cross-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.modal-search-label {
+  width: 155px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 26px;
+}
+
+.modal-search-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.field-group {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.modal-search-field {
+  flex-grow: 1;
+  padding: 15px 19px 14px 19px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 21px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px;
+}
+
+.kids-number .modal-search-field,
+.adult-number .modal-search-field {
+  text-align: center;
+}
+
+.modal-search-field::-webkit-calendar-picker-indicator {
+  display: none;
+}
+
+.modal-search-field::-webkit-outer-spin-button,
+.modal-search-field::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.modal-search-button {
+  padding: 12px 26px;
+  box-sizing: border-box;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #83B3D3;
+  border: none;
+  border-radius: 10px;
+}
+
+.modal-search-wrapper {
+  display: flex;
+}
+
+.kids-number .modal-search-label {
+  width: 97px;
+}
+
+.modal-search-wrapper .modal-search-field {
+  width: 133px;
+  box-sizing: border-box;
+}
+
+.modal-search-wrapper .adult-number {
+  margin-right: 56px;
+}
+
+.arrival-date::after,
+.depart-date::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 15px;
+  top: 18px;
+  right: 17px;
+  background-image: url("../images/calendar-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.minus {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 18px;
+  right: 19px;
+  margin: auto;
+  text-align: center;
+  cursor: pointer;
+  opacity: 0.3;
+  outline: 1px solid crimson;
+}
+
+
+.plus {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 18px;
+  right: 95px;
+  opacity: 0.3;
+  cursor: pointer;
+  text-align: center;
+  outline: 1px solid crimson;
+}
+
+
